--- a/anshu.html
+++ b/anshu.html
@@ -4,7 +4,7 @@
 <title> hello </title>
 </head>
 <body>
-<h1 align="centre">welcome to gurujada it solutions</h1>
+<h1 align="centre">welcome to kloudinfotech</h1>
 <p> new world </p>
 </body>
 </html>
